# credit-simulator

./: README.md  pyproject.toml
data/: financial_2023.csv
src/: batch_collect.py  dart_api.py  financial.py  label.py
