[tool.poetry]
name = "credit-simulator"
version = "0.1.0"
description = ""
authors = ["eden <yangsehyuk1117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^3.0.2"
python-dotenv = "^1.2.2"
finance-datareader = "^0.9.110"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"